fixed alignment of button text

--- a/client/src/components/ImageViewer/styles.css
+++ b/client/src/components/ImageViewer/styles.css
@@ -19,7 +19,6 @@
   color: #fff;
   cursor: pointer;
   transition: all .3s ease;
-  text-align: left;
 }
 
 .button.active{
